Redesign tab opening preferences for studies to improve usability and handle different import contexts #806